# nixos-config

./: .gitignore  LICENSE  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  justfile  lib.nix
apps/: berkeley-mono.nix  cursor-cli.nix  desktoppr.nix  docker-scout.nix  nvim.nix
apps/emacs/: default.nix  ghostel.nix
apps/maniyan/: default.nix
apps/nvim-packages/: amp-nvim.nix
config/hypr/: hyprland.conf  hyprlock.conf
config/kitty/: kitty.conf
config/npm/: .npmrc
config/qutebrowser/: config.py
config/swaync/: config.json  style.css
config/waybar/: config.jsonc  style.css
machines/: default.nix
machines/fern/: configuration.nix  hardware-configuration.nix
machines/uwu/: configuration.nix  home.nix  homebrew.nix  system-defaults.nix
machines/violet/: extraConfiguration.nix  hardware-configuration.nix
machines/winry/: configuration.nix  home.nix  homebrew.nix  system-defaults.nix
modules/: README.md
modules/andrew-shell/librepods/source/: Cargo.toml  result
modules/andrew-shell/librepods/source/src/: ipc.rs  main.rs  media_controller.rs  utils.rs
modules/andrew-shell/librepods/source/src/bluetooth/: aacp.rs  le.rs
modules/andrew-shell/librepods/source/src/devices/: airpods.rs  enums.rs  nothing.rs
modules/andrew-shell/shell/utils/calendar-status/: Cargo.toml  README.md  default.nix
modules/andrew-shell/shell/utils/calendar-status/src/: events.rs  main.rs  profile.rs
modules/andrew-shell/shell/utils/nm-status/: Cargo.toml
modules/andrew-shell/shell/utils/nm-status/src/: main.rs
(+108 files in other folders)
