[package]
name = "librepods"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.50.0", features = ["full"]}
bluer = { version = "0.17.4", features = ["full"] }
env_logger = {version = "0.11.10", features = ["auto-color"]}
uuid = "1.23.0"
log = "0.4.29"
dbus = "0.9.10"
hex = "0.4.3"
libpulse-binding = "2.30.1"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.9.0-rc.4"
futures = "0.3.32"
notify-rust = "4.11"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 8
panic = "abort"
strip = true
